--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.datasource.password=Nel62*com
 #spring.data.rest.base-path=/v8/h2
 spring.banner.location=banner.txt
 
+my.greeting=Hello
 
+nel.name=nelson
+nel.age=18
+nel.job=software developer
