final commit today

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ my.greeting=Hello
 nel.name=nelson
 nel.age=18
 nel.job=software developer
+
+
+# configuring https
+#server.port: 443
+#server.ssl.key-store: keystore.p12
+#server.ssl.key-store-password: springboot
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: tomcat
